sails/client-gen/tests/snapshots/generator__full.snap
---
source: sails/client-gen/tests/generator.rs
expression: "gen(IDL, \"Service\")"
---
// Code generated by sails-client-gen. DO NOT EDIT.
use core::marker::PhantomData;
#[allow(unused_imports)]
use sails::collections::BTreeMap;
#[allow(unused_imports)]
use sails::{
    calls::{Activation, Call, Query, Remoting, RemotingAction},
    prelude::*,
    String,
};
pub struct ServiceFactory<R, A> {
    remoting: R,
    _phantom: PhantomData<A>,
}
impl<R: Remoting<A>, A> ServiceFactory<R, A> {
    #[allow(unused)]
    pub fn new(remoting: R) -> Self {
        Self {
            remoting,
            _phantom: PhantomData,
        }
    }
}
impl<R: Remoting<A> + Clone, A: Default> traits::ServiceFactory<A> for ServiceFactory<R, A> {
    fn new(&self, a: u32) -> impl Activation<A> {
        RemotingAction::<_, _, service_factory::io::New>::new(self.remoting.clone(), a)
    }
}
pub mod service_factory {
    use super::*;
    pub mod io {
        use super::*;
        use sails::calls::ActionIo;
        pub struct New(());
        impl New {
            #[allow(dead_code)]
            pub fn encode_call(a: u32) -> Vec<u8> {
                <New as ActionIo>::encode_call(&a)
            }
        }
        impl ActionIo for New {
            const ROUTE: &'static [u8] = &[12, 78, 101, 119];
            type Params = u32;
            type Reply = ();
        }
    }
}
#[derive(Clone)]
pub struct Service<R, A>
where
    R: Remoting<A>,
    A: Default,
{
    remoting: R,
    _phantom: PhantomData<A>,
}
impl<A: Default, R: Remoting<A>> Service<R, A> {
    pub fn new(remoting: R) -> Self {
        Self {
            remoting,
            _phantom: PhantomData,
        }
    }
}
impl<R, A> traits::Service<A> for Service<R, A>
where
    R: Remoting<A> + Clone,
    A: Default,
{
    fn do_this(
        &mut self,
        p1: u32,
        p2: String,
        p3: (Option<String>, u8),
        p4: ThisThatSvcAppTupleStruct,
    ) -> impl Call<A, (String, u32)> {
        RemotingAction::<_, _, service::io::DoThis>::new(self.remoting.clone(), (p1, p2, p3, p4))
    }
    fn do_that(
        &mut self,
        param: ThisThatSvcAppDoThatParam,
    ) -> impl Call<A, Result<(String, u32), (String,)>> {
        RemotingAction::<_, _, service::io::DoThat>::new(self.remoting.clone(), param)
    }
    fn this(&self, v1: Vec<u16>) -> impl Query<A, u32> {
        RemotingAction::<_, _, service::io::This>::new(self.remoting.clone(), v1)
    }
    fn that(&self, v1: ()) -> impl Query<A, Result<String, String>> {
        RemotingAction::<_, _, service::io::That>::new(self.remoting.clone(), v1)
    }
}
pub mod service {
    use super::*;
    pub mod io {
        use super::*;
        use sails::calls::ActionIo;
        pub struct DoThis(());
        impl DoThis {
            #[allow(dead_code)]
            pub fn encode_call(
                p1: u32,
                p2: String,
                p3: (Option<String>, u8),
                p4: super::ThisThatSvcAppTupleStruct,
            ) -> Vec<u8> {
                <DoThis as ActionIo>::encode_call(&(p1, p2, p3, p4))
            }
        }
        impl ActionIo for DoThis {
            const ROUTE: &'static [u8] = &[24, 68, 111, 84, 104, 105, 115];
            type Params = (
                u32,
                String,
                (Option<String>, u8),
                super::ThisThatSvcAppTupleStruct,
            );
            type Reply = (String, u32);
        }
        pub struct DoThat(());
        impl DoThat {
            #[allow(dead_code)]
            pub fn encode_call(param: super::ThisThatSvcAppDoThatParam) -> Vec<u8> {
                <DoThat as ActionIo>::encode_call(&param)
            }
        }
        impl ActionIo for DoThat {
            const ROUTE: &'static [u8] = &[24, 68, 111, 84, 104, 97, 116];
            type Params = super::ThisThatSvcAppDoThatParam;
            type Reply = Result<(String, u32), (String,)>;
        }
        pub struct This(());
        impl This {
            #[allow(dead_code)]
            pub fn encode_call(v1: Vec<u16>) -> Vec<u8> {
                <This as ActionIo>::encode_call(&v1)
            }
        }
        impl ActionIo for This {
            const ROUTE: &'static [u8] = &[16, 84, 104, 105, 115];
            type Params = Vec<u16>;
            type Reply = u32;
        }
        pub struct That(());
        impl That {
            #[allow(dead_code)]
            pub fn encode_call(v1: ()) -> Vec<u8> {
                <That as ActionIo>::encode_call(&v1)
            }
        }
        impl ActionIo for That {
            const ROUTE: &'static [u8] = &[16, 84, 104, 97, 116];
            type Params = ();
            type Reply = Result<String, String>;
        }
    }
}
#[derive(PartialEq, Debug, Encode, Decode)]
#[codec(crate = sails::scale_codec)]
pub struct ThisThatSvcAppTupleStruct(pub bool);
#[derive(PartialEq, Debug, Encode, Decode)]
#[codec(crate = sails::scale_codec)]
pub struct ThisThatSvcAppDoThatParam {
    pub p1: u32,
    pub p2: String,
    pub p3: ThisThatSvcAppManyVariants,
}
#[derive(PartialEq, Debug, Encode, Decode)]
#[codec(crate = sails::scale_codec)]
pub enum ThisThatSvcAppManyVariants {
    One,
    Two(u32),
    Three(Option<u32>),
    Four { a: u32, b: Option<u16> },
    Five((String, u32)),
    Six((u32,)),
}
#[derive(PartialEq, Debug, Encode, Decode)]
#[codec(crate = sails::scale_codec)]
pub enum T {
    One,
}
pub mod traits {
    use super::*;
    #[allow(dead_code)]
    pub trait ServiceFactory<A> {
        #[allow(clippy::new_ret_no_self)]
        #[allow(clippy::wrong_self_convention)]
        fn new(&self, a: u32) -> impl Activation<A>;
    }
    pub trait Service<A> {
        #[allow(clippy::type_complexity)]
        fn do_this(
            &mut self,
            p1: u32,
            p2: String,
            p3: (Option<String>, u8),
            p4: ThisThatSvcAppTupleStruct,
        ) -> impl Call<A, (String, u32)>;
        #[allow(clippy::type_complexity)]
        fn do_that(
            &mut self,
            param: ThisThatSvcAppDoThatParam,
        ) -> impl Call<A, Result<(String, u32), (String,)>>;
        #[allow(clippy::type_complexity)]
        fn this(&self, v1: Vec<u16>) -> impl Query<A, u32>;
        #[allow(clippy::type_complexity)]
        fn that(&self, v1: ()) -> impl Query<A, Result<String, String>>;
    }
}
