sails/client-gen/tests/snapshots/generator__nonzero_works.snap
---
source: sails/client-gen/tests/generator.rs
expression: "gen(idl, \"NonZeroParams\")"
---
// Code generated by sails-client-gen. DO NOT EDIT.
#[allow(unused_imports)]
use sails::collections::BTreeMap;
#[allow(unused_imports)]
use sails::{
    calls::{Activation, Call, Query, Remoting, RemotingAction},
    prelude::*,
    String,
};
pub struct NonZeroParams<R> {
    remoting: R,
}
impl<R> NonZeroParams<R> {
    pub fn new(remoting: R) -> Self {
        Self { remoting }
    }
}
impl<R: Remoting + Clone> traits::NonZeroParams for NonZeroParams<R> {
    type Args = R::Args;
    fn do_this(
        &mut self,
        p1: NonZeroU256,
        p2: MyParam,
    ) -> impl Call<Output = NonZeroU64, Args = R::Args> {
        RemotingAction::<_, non_zero_params::io::DoThis>::new(self.remoting.clone(), (p1, p2))
    }
}
pub mod non_zero_params {
    use super::*;
    pub mod io {
        use super::*;
        use sails::calls::ActionIo;
        pub struct DoThis(());
        impl DoThis {
            #[allow(dead_code)]
            pub fn encode_call(p1: NonZeroU256, p2: super::MyParam) -> Vec<u8> {
                <DoThis as ActionIo>::encode_call(&(p1, p2))
            }
        }
        impl ActionIo for DoThis {
            const ROUTE: &'static [u8] = &[24, 68, 111, 84, 104, 105, 115];
            type Params = (NonZeroU256, super::MyParam);
            type Reply = NonZeroU64;
        }
    }
}
#[derive(PartialEq, Debug, Encode, Decode)]
#[codec(crate = sails::scale_codec)]
pub struct MyParam {
    pub f1: NonZeroU256,
    pub f2: Vec<NonZeroU8>,
    pub f3: Option<(NonZeroU64, NonZeroU256)>,
}
pub mod traits {
    use super::*;
    #[allow(clippy::type_complexity)]
    pub trait NonZeroParams {
        type Args;
        fn do_this(
            &mut self,
            p1: NonZeroU256,
            p2: MyParam,
        ) -> impl Call<Output = NonZeroU64, Args = Self::Args>;
    }
}
#[cfg(feature = "mockall")]
#[cfg(not(target_arch = "wasm32"))]
pub mod mockall {
    use super::*;
    use sails::mockall::*;
    mock! { pub NonZeroParams<A> {} #[allow(refining_impl_trait)] #[allow(clippy::type_complexity)] impl<A> traits::NonZeroParams for NonZeroParams<A> { type Args = A; fn do_this (&mut self, p1: NonZeroU256,p2: MyParam,) -> MockCall<A, NonZeroU64>; } }
}
